Fist css template approach

--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,1 +1,113 @@
-Hola Readaptadores!
+<!-- Loader -->
+<div class="loader">
+	<div class="loader-img"></div>
+</div>
+
+<!-- Top menu -->
+<nav class="navbar navbar-fixed-top" role="navigation">
+	<div class="container">
+		<div class="navbar-header">
+			<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#top-navbar-1">
+				<span class="sr-only">Toggle navigation</span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+				<span class="icon-bar"></span>
+			</button>
+			<a class="navbar-brand" href="index.html">Lancar - Bootstrap One-Page Portfolio Template</a>
+		</div>
+		<!-- Collect the nav links, forms, and other content for toggling -->
+		<div class="collapse navbar-collapse" id="top-navbar-1">
+			<ul class="nav navbar-nav navbar-right">
+				<li><a class="scroll-link" href="#top-content">Top</a></li>
+				<li><a class="scroll-link" href="#what-we-do">Services</a></li>
+				<li><a class="scroll-link" href="#portfolio">Portfolio</a></li>
+				<li><a class="scroll-link" href="#pricing-2">Prices</a></li>
+				<li><a class="scroll-link" href="#about">About</a></li>
+				<li><a class="scroll-link" href="#contact">Contact</a></li>
+			</ul>
+		</div>
+	</div>
+</nav>
+
+<!-- Page title -->
+<div class="page-title top-content">
+    <div class="page-title-text wow fadeInUp">
+    	<h1>Welcome to our site</h1>
+    	<p>We are Lancar, a design agency doing cool things with Photoshop and WordPress. Take a look around to see what we can do for you!</p>
+    	<div class="page-title-bottom-link">
+    		<a class="big-link-1 btn scroll-link" href="#pricing-2">Start now</a>
+    		<a class="big-link-2 btn scroll-link" href="#what-we-do">Learn more</a>
+    	</div>
+    </div>
+</div>
+
+<!-- What we do -->
+<div class="block-3-container section-container what-we-do-container">
+  <div class="container">
+      <div class="row">
+          <div class="col-sm-12 block-3 section-description wow fadeIn">
+              <h2>What we do</h2>
+              <div class="divider-1 wow fadeInUp"><span></span></div>
+              <p>
+              	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut 
+              	labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.
+              </p>
+          </div>
+      </div>
+      <div class="row">
+        	<div class="col-sm-3 block-3-box wow fadeInUp">
+          	<div class="block-3-box-icon">
+          		<span aria-hidden="true" class="icon_pencil"></span>
+          	</div>
+              <h3>Web Design</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+            </div>
+            <div class="col-sm-3 block-3-box wow fadeInDown">
+          	<div class="block-3-box-icon">
+          		<span aria-hidden="true" class="icon_cogs"></span>
+          	</div>
+              <h3>Ui / Ux</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+            </div>
+            <div class="col-sm-3 block-3-box wow fadeInUp">
+          	<div class="block-3-box-icon">
+          		<span aria-hidden="true" class="social_twitter"></span>
+          	</div>
+              <h3>Social Media</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+            </div>
+            <div class="col-sm-3 block-3-box wow fadeInDown">
+          	<div class="block-3-box-icon">
+          		<span aria-hidden="true" class="icon_lightbulb"></span>
+          	</div>
+              <h3>Branding</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor.</p>
+            </div>
+      </div>
+  </div>
+</div>
+
+<!-- Clients -->
+<div class="clients-container section-container section-container-gray">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-2 clients-text wow fadeInLeft">
+            	<h3>We've worked with these guys:</h3>
+      	</div>
+      	<div class="col-sm-10 clients wow fadeInUp">
+            	<a href="https://wrapbootstrap.com/theme/trilli-bi-fullscreen-landing-page-WB000X02N?ref=azmind" target="_blank" rel="nofollow">
+            		<img src="assets/img/clients/1.png" alt="" data-at2x="assets/img/clients/1.png">
+            	</a>
+            	<a href="https://wrapbootstrap.com/theme/areta-agency-portfolio-template-WB0L5XF38?ref=azmind" target="_blank" rel="nofollow">
+            		<img src="assets/img/clients/2.png" alt="" data-at2x="assets/img/clients/2.png">
+            	</a>
+            	<a href="https://wrapbootstrap.com/theme/seria-coming-soon-landing-page-WB05D4591?ref=azmind" target="_blank" rel="nofollow">
+            		<img src="assets/img/clients/3.png" alt="" data-at2x="assets/img/clients/3.png">
+            	</a>
+            	<a href="https://wrapbootstrap.com/theme/jesis-responsive-app-landing-page-WB085528N?ref=azmind" target="_blank" rel="nofollow">
+            		<img src="assets/img/clients/4.png" alt="" data-at2x="assets/img/clients/4.png">
+            	</a>
+      	</div>
+      </div>
+	</div>
+</div>
